# CS7GV5-RTA

./: .gitignore  .gitmodules
Assignment1/: CMakeLists.txt  CMakePresets.json  Main.cpp  assignment1_report.docx  imgui.ini  links.txt
Assignment1/Shaders/: scene.frag  scene.vert  skybox.frag  skybox.vert
demo_ik/: assignment2_report.docx  demo_ik.uproject
demo_ik/Content/maps/: zero.umap
demo_ik/Source/: demo_ik.Target.cs  demo_ikEditor.Target.cs
demo_ik/Source/demo_ik/: APosableCharacter.cpp  APosableCharacter.h
